// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tag/demo/basic.md correctly 1`] = `
<div>
  <div class="ant-tag ant-tag-zoom-enter">Tag 1</div>
  <div class="ant-tag ant-tag-zoom-enter">
    <a href="https://github.com/vueComponent/ant-design">Link</a>
  </div>
  <div class="ant-tag ant-tag-zoom-enter">Tag 2
    <i class="anticon anticon-cross"></i>
  </div>
  <div class="ant-tag ant-tag-zoom-enter">Prevent Default
    <i class="anticon anticon-cross"></i>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/checkable.md correctly 1`] = `
<div>
  <div class="ant-tag ant-tag-checkable">Tag1</div>
  <div class="ant-tag ant-tag-checkable">Tag2</div>
  <div class="ant-tag ant-tag-checkable">Tag3</div>
</div>
`;

exports[`renders ./components/tag/demo/colorful.md correctly 1`] = `
<div>
  <h4 style="margin-bottom: 16px;">Presets:</h4>
  <div>
    <div class="ant-tag ant-tag-pink ant-tag-zoom-enter">pink</div>
    <div class="ant-tag ant-tag-red ant-tag-zoom-enter">red</div>
    <div class="ant-tag ant-tag-orange ant-tag-zoom-enter">orange</div>
    <div class="ant-tag ant-tag-green ant-tag-zoom-enter">green</div>
    <div class="ant-tag ant-tag-cyan ant-tag-zoom-enter">cyan</div>
    <div class="ant-tag ant-tag-blue ant-tag-zoom-enter">blue</div>
    <div class="ant-tag ant-tag-purple ant-tag-zoom-enter">purple</div>
  </div>
  <h4>Custom:</h4>
  <div>
    <div class="ant-tag ant-tag-has-color ant-tag-zoom-enter" style="background-color: rgb(255, 85, 0);">#f50</div>
    <div class="ant-tag ant-tag-has-color ant-tag-zoom-enter" style="background-color: rgb(45, 183, 245);">#2db7f5</div>
    <div class="ant-tag ant-tag-has-color ant-tag-zoom-enter" style="background-color: rgb(135, 208, 104);">#87d068</div>
    <div class="ant-tag ant-tag-has-color ant-tag-zoom-enter" style="background-color: rgb(16, 142, 233);">#108ee9</div>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/control.md correctly 1`] = `
<div>
  <div class="ant-tag ant-tag-zoom-enter">
    Unremovable
  </div>
  <div class="ant-tag ant-tag-zoom-enter">
    Tag 2
    <i class="anticon anticon-cross"></i>
  </div>
  <div class="ant-tag ant-tag-zoom-enter">
    Tag 3Tag 3Tag 3Tag 3...
    <i class="anticon anticon-cross"></i>
  </div>
  <div class="ant-tag ant-tag-zoom-enter" style="border-style: dashed; background: rgb(255, 255, 255);">
    <i class="anticon anticon-plus"></i> New Tag
  </div>
</div>
`;

exports[`renders ./components/tag/demo/hot-tags.md correctly 1`] = `
<div><strong>Categories:</strong>
  <div class="ant-tag ant-tag-checkable">
    Movies
  </div>
  <div class="ant-tag ant-tag-checkable">
    Books
  </div>
  <div class="ant-tag ant-tag-checkable">
    Music
  </div>
  <div class="ant-tag ant-tag-checkable">
    Sports
  </div>
</div>
`;
